# cult-lite-farmer

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  build_docker.sh  readme.md
.github/workflows/: rust.yml
lite-farmer/: Cargo.toml
lite-farmer/src/: lib.rs  main.rs
lite-farmer/src/config/: mod.rs  tls.rs
lite-farmer/src/farmer/: api.rs  mod.rs  server.rs
lite-farmer/src/farmer/tasks/: handshake.rs  mod.rs  new_proof_of_space.rs  request_signed_values.rs  respond_signatures.rs  signage_point.rs
lite-farmer/src/harvester/: api.rs  mod.rs  plot_manager.rs  plot_sync.rs  server.rs
lite-farmer/src/harvester/tasks/: handshake.rs  harvester_handshake.rs  mod.rs  new_signage_point_harvester.rs  plot_manager.rs  request_signatures.rs
