[workspace]
resolver = "2"

members = [
    "lite-farmer",
    "dg_xch_utils/cli",
    "dg_xch_utils/clients",
    "dg_xch_utils/core",
    "dg_xch_utils/keys",
    "dg_xch_utils/macros",
    "dg_xch_utils/proof_of_space",
    "dg_xch_utils/puzzles",
    "dg_xch_utils/serialize"
]

[workspace.dependencies]
async-trait = "0.1.58"
bech32 = "0.9.1"
bip39 = {version= "2.0.0", features=["rand"] }
blake3 = "1.3.1"
bls12_381 = "0.8.0"
blst = "0.3.7"
bytes = "1.4.0"
clap = { version = "4.1.1", features = ["derive"] }
dg_xch_cli = {path = "./dg_xch_utils/cli"}
dg_xch_clients = {path = "./dg_xch_utils/clients"}
dg_xch_core = {path = "./dg_xch_utils/core", features = ["paperclip"] }
dg_xch_keys = {path = "./dg_xch_utils/keys"}
dg_xch_macros = {path = "./dg_xch_utils/macros"}
dg_xch_pos = {path = "./dg_xch_utils/proof_of_space"}
dg_xch_puzzles = {path = "./dg_xch_utils/puzzles"}
dg_xch_serialize = {path = "./dg_xch_utils/serialize"}
futures-util = "0.3.25"
hex = "0.4.3"
hkdf = "0.12.3"
hyper = {version="0.14.23", features=["full"]}
lazy_static = "1.4.0"
log = "0.4.17"
nix = "0.26.2"
num-bigint = "=0.4.0"
num-integer = "0.1.45"
num-traits = "=0.2.14"
openssl = "0.10.45"
rayon = "1.6.1"
regex = "1.5.6"
reqwest = {version="0.11.11", features=["json", "rustls-tls-webpki-roots"]}
rustls = {version = "0.21.2", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.1"
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
sha2 = "0.10.6"
simple_logger = "4.0.0"
time = {version = "0.3.20", features = ["parsing", "formatting"]}
tokio = {version = "1.21.2", features = ["rt-multi-thread", "macros", "process", "io-util", "fs", "signal"]}
tokio-tungstenite = {version = "0.20.0", features = ["rustls-tls-webpki-roots", "rustls"] }
tokio-rustls = {version = "0.24.1", features = [] }
uuid = {version= "1.2.2", features=["v4"]}