[package]
name = "lite-farmer"
version = "1.0.0"
edition = "2021"
authors = ["James Hoerr"]
description = "Lite Farmer and Harvester for the Chia Blockchain"

[dependencies]
dialoguer = "0.10.3"
async-trait.workspace = true
bech32.workspace = true
bip39.workspace = true
blst.workspace = true
bytes.workspace = true
clap.workspace = true
dg_xch_cli.workspace = true
dg_xch_clients.workspace = true
dg_xch_core.workspace = true
dg_xch_keys.workspace = true
dg_xch_pos.workspace = true
dg_xch_puzzles.workspace = true
dg_xch_serialize.workspace = true
futures = "0.3.25"
futures-util.workspace = true
hex.workspace = true
hkdf.workspace = true
hyper.workspace = true
hyper-tungstenite = "0.9.0"
lazy_static.workspace = true
log.workspace = true
nix.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
openssl = "0.10.45"
paperclip = { version = "0.8.0", features = ["actix4"] }
rand = "0.8.5"
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.14"
sha2.workspace = true
simple_logger.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
webpki-roots = "0.22.6"
